# genrative_ai_with_fastapi

./: compose.yaml
01_chat_completion/: Dockerfile  README.md
01_chat_completion/app/: main.py
02_chat_completion_multi_role/: .backupenv  Dockerfile  README.md
02_chat_completion_multi_role/app/: main.py
03_streaming/: Dockerfile  README.md
03_streaming/app/: main.py
04_function_calling/: Dockerfile  README.md  pyproject.toml
04_function_calling/app/: main.py
05_assistants_code_interpreter/: Dockerfile  README.md  pyproject.toml
05_assistants_code_interpreter/app/: main.py
06_assistants_upload_files/: Dockerfile  README.md
06_assistants_upload_files/app/: main.py  settings.py
07_assistants_function_calling/: Dockerfile  README.md
07_assistants_function_calling/app/: main.py
